--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway:400,500');
+
 .App {
+  max-width: 550px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  font-family: "Rareway", san-serif;
+
+}
+
+#quote-box {
+  background-color: #fff;
+  padding: 30px;
   text-align: center;
+  font-size: 1.6em;
+  font-weight: 500;
+  border-radius: 5px;
+  clear: both;
+  animation: myEffect .5s;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#quote-author {
+  text-align: right;
+  margin: 20px 0;
+  clear: both;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#links {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
 }
 
-.App-link {
-  color: #61dafb;
+i {
+  font-size: 1em;
+  padding: 3px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.button {
+  padding: 10px;
+  font-size: .8em;
+  color: #fff;
+  border-radius: 7px;
+  border: none;
+  outline: none;
+}
+
+@media screen and (max-width: 900px){
+  .App {
+    width: 70%;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media screen and (max-width: 600px){
+  body {
+    font-size: .7em;
+  }
+
+  .App {
+    width: 90%;
   }
 }
